--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="checkout.css">
     <link rel="stylesheet" href="cart.css">
     <link rel="stylesheet" href="myAccount.css">
-    <title>Organit Template</title>
+    <title>Organic Store</title>
 </head>
 <body onin>
 
